force-app/main/default/objects/AP_Approver__c/fields/Approval_Process_Step_Definition__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Step_Definition__c</fullName>
    <label>Approval Process Step Definition</label>
    <referenceTo>ApprovalProcessStepDefinition__c</referenceTo>
    <relationshipLabel>AP_Approvers</relationshipLabel>
    <relationshipName>AP_Approvers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>