force-app/main/default/objects/AP_Approver__c/fields/ApproverSet__c.field-meta.xml
<CustomField>
    <fullName>ApproverSet__c</fullName>
    <label>ApproverSet</label>
    <referenceTo>AP_StepApproverSet__c</referenceTo>
    <relationshipLabel>AP_Approvers</relationshipLabel>
    <relationshipName>AP_Approvers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>