force-app/main/default/objects/AP_Approver__c/fields/StepApproverList__c.field-meta.xml
<CustomField>
    <fullName>StepApproverList__c</fullName>
    <label>StepApproverList</label>
    <referenceTo>AP_StepApproverList__c</referenceTo>
    <relationshipLabel>AP_Approvers</relationshipLabel>
    <relationshipName>AP_Approvers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>