force-app/main/default/objects/AP_Approver__c/fields/StepApproverSet__c.field-meta.xml
<CustomField>
    <fullName>StepApproverSet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>StepApproverSet(Deprecated)</label>
    <referenceTo>AP_StepApproverSet__c</referenceTo>
    <relationshipLabel>AP_Approvers</relationshipLabel>
    <relationshipName>AP_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>